path_base_routing/gke/hello-world/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment-1
spec:
  selector:
    matchLabels:
      greeting: hello
      version: one
  replicas: 1
  template:
    metadata:
      labels:
        greeting: hello
        version: one
    spec:
      containers:
      - name: hello-app-1
        image: "us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0"
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment-2
spec:
  selector:
    matchLabels:
      greeting: hello
      version: two
  replicas: 1
  template:
    metadata:
      labels:
        greeting: hello
        version: two
    spec:
      containers:
      - name: hello-app-2
        image: "us-docker.pkg.dev/google-samples/containers/gke/hello-app:2.0"
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: dinosaur
spec:
  selector:
    matchLabels:
      greeting: hello
      version: dino
  replicas: 1
  template:
    metadata:
      labels:
        greeting: hello
        version: dino
    spec:
      containers:
      - name: dino
        image: "sunilkumawat/dinosaur:v3"

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: react
spec:
  selector:
    matchLabels:
      greeting: hello
      version: react
  replicas: 1
  template:
    metadata:
      labels:
        greeting: hello
        version: react
    spec:
      containers: 
      - name: react
        image: "sunilkumawat/react:v1"
