path_base_routing/gke/hello-world/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-1
spec:
  type: ClusterIP
  selector:
    greeting: hello
    version: one
  ports:
  - protocol: TCP
    port: 60000
    targetPort: 50000

---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-2
spec:
  type: ClusterIP
  selector:
    greeting: hello
    version: two
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: dino
spec:
  type: ClusterIP
  selector:
    greeting: hello
    version: dino
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: react
spec:
  type: ClusterIP
  selector:
    greeting: hello
    version: react
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
